# lgtm

./: Cargo.toml  PORTING.md  README.md  lgtm.example.toml  wftt.example.toml
.github/workflows/: publish.yml
src/: ai.rs  app.rs  cache.rs  config.rs  github.rs  main.rs  models.rs  sorting.rs  worktree.rs
src/app/: diff.rs  logic.rs
