[package]
name = "lgtm"
version = "0.2.1"
edition = "2024"

[dependencies]
anyhow = "1.0"
arboard = "3.4"
base64 = "0.22"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4.5", features = ["derive"] }
crossterm = "0.28"
dirs = "5.0"
futures = "0.3"
ratatui = "0.29"
regex = "1.11"
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
thiserror = "2.0"
tokio = { version = "1.43", features = ["full"] }
toml = "0.8"
